--- a/src/main/webapp/app/entities/sortie-article/sortiearticleuser.html
+++ b/src/main/webapp/app/entities/sortie-article/sortiearticleuser.html
@@ -1,7 +1,28 @@
 <div>
-    <h2 data-translate="gestCApp.sortieArticle.home.title">Sortie Articles</h2>
+    <h2 data-translate="gestCApp.sortieArticle.home.myvente">Sortie Articles</h2>
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
+                <div class="row">
+                <div class="col-md-5">
+  <p class="input-group">
+                        <span class="input-group-addon" data-translate="gestCApp.sortieArticle.home.from">from</span>
+                        <input type="date" class="input-sm form-control" name="start" ng-model="fromDate"
+                               ng-change="vm.onChangeDate()" uib-datepicker-popup="{{dateformat}}" is-open="vm.datePickerOpenStatus.fromDate" required/>  <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="vm.openCalendar('fromDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+                    </span>
+                        <span class="input-group-addon" data-translate="gestCApp.sortieArticle.home.to">to</span>
+                        <input type="date" class="input-sm form-control" name="end" ng-model="toDate"
+                               uib-datepicker-popup="{{dateformat}}" is-open="vm.datePickerOpenStatus.toDate" required/>  <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="vm.openCalendar('toDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+                    </span>
+                     <span  class="input-group-btn width-min" >
+                            <button class="btn btn-info" ng-click="vm.loadAllByDateUser(fromDate,toDate)">
+                                <span class="glyphicon glyphicon-search"></span>
+                            </button>
+                        </span>
+                    </p>
+                </div>
+            </div>
     <div class="table-responsive">
         <table class="jh-table table table-striped">
             <thead>
