--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -45,7 +45,7 @@
         <div class="col-md-4"><div ng-switch="vm.isAuthenticated()">
  <div class="panel pull-right" ng-switch-when="true">
      <div class="panel-body">
-         <ul class="list-inline">
+         <ul class="list-inline"><li class="item" ><a ui-sref="rupstock"><span class=" label label-danger">Produits en  stock critique</span>&nbsp;<span class="badge label-info">{{vm.stockAlerte.length}}</span></a></li><br>
     <li class="item" ><a ui-sref="rupstock"><span class=" label label-danger">Produits en rupture de stock</span>&nbsp;<span class="badge label-info">{{vm.stockAlerte.length}}</span></a></li><br>
     <li class="item"><span class=" label label-danger">Produits Périmés </span>&nbsp;<span class="badge label-danger">{{vm.stockPerem.length}}</span></li>
     <br>
