--- a/src/main/webapp/app/comptoir/comptoir.html
+++ b/src/main/webapp/app/comptoir/comptoir.html
@@ -1,5 +1,6 @@
 <div ng-cloak>
     <h3 class="text-center"><u>Comptoir Vente En Détail </u></h3>
+    <jhi-alert></jhi-alert>
     <div class="container">
         <div class="row">
             <div class="btn-group" uib-dropdown>
@@ -109,7 +110,7 @@
                 </td>
                 <td>
                     <div class="buttons" ng-show="!tableform.$visible">
-                        <button type="button" class=" btn-danger" ng-click="removeuser($index)"><span
+                        <button type="button" class=" btn-danger" ng-click="removeUser($index)"><span
                             class="glyphicon glyphicon-trash"></span></button>
                     </div>
                 </td>
