--- a/src/main/webapp/app/entities/sortie-article/sortie-articles.html
+++ b/src/main/webapp/app/entities/sortie-article/sortie-articles.html
@@ -116,7 +116,7 @@
         </table>
     </div>
     <div class="text-center">
-        <jhi-item-count page="vm.page1" total="vm.queryCount" items-per-page="vm.itemsPerPage"></jhi-item-count>
-        <uib-pagination class="pagination-sm" total-items="vm.totalItems" items-per-page="vm.itemsPerPage" ng-model="vm.page1" ng-change="vm.transition1()"></uib-pagination>
+        <jhi-item-count page="vm.page" total="vm.queryCount" items-per-page="vm.itemsPerPage"></jhi-item-count>
+        <uib-pagination class="pagination-sm" total-items="vm.totalItems" items-per-page="vm.itemsPerPage" ng-model="vm.page" ng-change="vm.transition()"></uib-pagination>
     </div>
 </div>
