--- a/src/main/webapp/app/mouvement/mouvement.html
+++ b/src/main/webapp/app/mouvement/mouvement.html
@@ -5,19 +5,20 @@
             class="btn btn-default btn-raised pull-right">add row
     </button>
     <table class="table table-hover table-condensed">
- <tr style="font-weight: bold">
-                <td >Article</td>
-                <td>Prix</td>
-                <td >Quantite</td>
-                <td >Prix Achat</td>
-                <td>TaxeTVA</td>
-                <td >Date Péremption</td>
-                <td ><span ng-show="tableform.$visible">Action</span></td>
-            </tr>
-      </tr>
-      <tr ng-repeat="user in lines | filter:filterUser">
-        <td>
-    <span editable-ui-select="user.article" data-e-ng-model="state" e-form="tableform" data-e-style="min-width:auto;max-height:22px">
+        <tr style="font-weight: bold">
+            <td>Article</td>
+            <td>Prix</td>
+            <td>Quantite</td>
+            <td>Prix Achat</td>
+            <td>TaxeTVA</td>
+            <td>Date Péremption</td>
+            <td><span ng-show="tableform.$visible">Action</span></td>
+        </tr>
+        </tr>
+        <tr ng-repeat="user in lines | filter:filterUser">
+            <td>
+    <span editable-ui-select="user.article" data-e-ng-model="state" e-form="tableform"
+          data-e-style="min-width:auto;max-height:22px">
       {{user.article.nomarticle}}
       <editable-ui-select-match placeholder="Choisir Article">
         {{$select.selected.nomarticle}}
@@ -26,56 +27,57 @@
         <div>{{state.nomarticle}}</div>
       </editable-ui-select-choices>
     </span>
-                </td>
-                <td>
-                  <span editable-text="user.prix_unitaire " e-form="tableform" edit-disabled="true" >
+            </td>
+            <td>
+                  <span editable-text="user.prix_unitaire " e-form="tableform" edit-disabled="true">
                     {{user.prix_unitaire}}
                   </span>
-                </td>
-                <td>
-          <span editable-text="user.quantite" e-form="tableform" >
+            </td>
+            <td>
+          <span editable-text="user.quantite" e-form="tableform">
             {{ user.quantite}}
           </span>
-                </td>
-                                <td>
-          <span editable-text="user.prixAchat" e-form="tableform" >
+            </td>
+            <td>
+          <span editable-text="user.prixAchat" e-form="tableform">
             {{ user.prixAchat}}
           </span>
-                </td>
-                           <td>
+            </td>
+            <td>
 
-                          <span editable-text="user.taxeTVA" e-form="tableform" >
+                          <span editable-text="user.taxeTVA" e-form="tableform">
                             {{user.taxeTVA}}
                           </span>
-                        </td> <td>
+            </td>
+            <td>
           <span e-form="tableform" data-e-style="min-width:80px;max-height:28px" editable-bsdate="user.dateperemption"
-           e-is-open="opened.$data"
-             e-ng-click="open($event,'$data')"
-             e-datepicker-popup="dd-MMMM-yyyy"
-             e-show-calendar-button="true"
-             id="hideCalendarButton">
+                e-is-open="opened.$data"
+                e-ng-click="open($event,'$data')"
+                e-datepicker-popup="dd-MMMM-yyyy"
+                e-show-calendar-button="true"
+                id="hideCalendarButton">
 
     {{ (user.dateperemption | date:"dd-MM-yyyy") || 'empty' }}
           </span>
-                </td>
-                <td >
+            </td>
+            <td>
 
-                    <form editable-form name="tableform" onaftersave="saveUser($data)" ng-show="tableform.$visible"
-                          class="form-buttons form-inline" shown="inserted == user">
-                        <button type="submit" ng-disabled="tableform$waiting" class="btn-sm btn-primary">
-                            <span class="glyphicon glyphicon-plus"></span>
-                        </button>
-                        <button type="button" ng-disabled="tableform.$waiting" ng-click="tableform.$cancel()"
-                                class="btn-sm btn-default">
-                            <span class="glyphicon glyphicon-move"></span>
-                        </button>
-                    </form>
-                    <div class="buttons" ng-show="!tableform.$visible">
-                        <button type="button" class="btn-sm btn-info" ng-click="tableform.$show()">edit</button>
-                        <button type="button" class="btn-sm btn-danger" ng-click="removeUser($index)">del</button>
-                    </div>
-                </td>
-      </tr>
+                <form editable-form name="tableform" onaftersave="saveUser($data)" ng-show="tableform.$visible"
+                      class="form-buttons form-inline" shown="inserted == user">
+                    <button type="submit" ng-disabled="tableform$waiting" class="btn-sm btn-primary">
+                        <span class="glyphicon glyphicon-plus"></span>
+                    </button>
+                    <button type="button" ng-disabled="tableform.$waiting" ng-click="tableform.$cancel()"
+                            class="btn-sm btn-default">
+                        <span class="glyphicon glyphicon-move"></span>
+                    </button>
+                </form>
+                <div class="buttons" ng-show="!tableform.$visible">
+                    <button type="button" class="btn-sm btn-info" ng-click="tableform.$show()">edit</button>
+                    <button type="button" class="btn-sm btn-danger" ng-click="removeUser($index)">del</button>
+                </div>
+            </td>
+        </tr>
     </table>
 
     <!-- buttons
@@ -88,139 +90,139 @@
       <button type="button" ng-disabled="tableform.$waiting" ng-click="addLine()" class="btn btn-default btn-raised">add row</button>-->
     <h4>TOTAL HT:<span class="badge btn-danger">{{getTotal()}}</span> TOTAL TTC:<span class="badge btn-danger">{{getTotalTTC()}}</span>
     </h4>
-      <div class="btn-form pull-right">
-                <button type="button" class="btn btn-primary btn-raised" ng-click="saveTable()">Valider</button>
-                <button type="button" class="btn btn-danger btn-raised" ng-click="cancel()">cancel</button>
-      </div>
+    <div class="btn-form pull-right">
+        <button type="button" class="btn btn-primary btn-raised" ng-click="saveTable()">Valider</button>
+        <button type="button" class="btn btn-danger btn-raised" ng-click="cancel()">cancel</button>
+    </div>
     <br><br><br>
-   <!--  <div class="row">
-<div class="col-lg-10" style="border: 2px">
-        <div class="panel">
+    <!--  <div class="row">
+ <div class="col-lg-10" style="border: 2px">
+         <div class="panel">
 
-            <div class="panel-body">
-        <table class="table table-hover table-condensed">
-            <tr style="font-weight: bold">
-                <td >Article</td>
-                <td>Prix</td>
-                <td >Quantite</td>
-                <td >Prix Achat</td>
-                <td >Date Péremption</td>
-                <td>TaxeTVA</td>
-                <td ><span ng-show="tableform.$visible">Action</span></td>
-            </tr>
-            <tr ng-repeat="user in lines | filter:filterUser">
-                <td>
-    <span editable-ui-select="user.article" data-e-ng-model="state" e-form="tableform" data-e-style="min-width:180px;">
-      {{user.article.nomarticle}}
-      <editable-ui-select-match placeholder="Choisir Article">
-        {{$select.selected.nomarticle}}
-      </editable-ui-select-match>
-      <editable-ui-select-choices repeat="state in vm.articles | filter: $select.search track by $index">
-        <div>{{state.nomarticle}}</div>
-      <small>
-        poids: {{state.poids}}
-      </small>
-      </editable-ui-select-choices>
-    </span>
-                </td>
-                <td>
-                  <span editable-text="user.prix_unitaire " e-form="tableform" edit-disabled="true" data-e-style="max-width:80px;">
-                    {{user.prix_unitaire}}
-                  </span>
-                </td>
-                <td>
-          <span editable-text="user.quantite" e-form="tableform" data-e-style="max-width:60px;"	type="number">
-            {{ user.quantite}}
-          </span>
-                </td>
-                                <td>
-          <span editable-text="user.prixAchat" e-form="tableform" data-e-style="max-width:60px;">
-            {{ user.prixAchat}}
-          </span>
-                </td>  <td>
-          <span e-form="tableform" data-e-style="min-width:80px;" editable-bsdate="user.dateperemption"
-           e-is-open="opened.$data"
-             e-ng-click="open($event,'$data')"
-             e-datepicker-popup="dd-MMMM-yyyy"
-             e-show-calendar-button="true"
-             id="hideCalendarButton">
+             <div class="panel-body">
+         <table class="table table-hover table-condensed">
+             <tr style="font-weight: bold">
+                 <td >Article</td>
+                 <td>Prix</td>
+                 <td >Quantite</td>
+                 <td >Prix Achat</td>
+                 <td >Date Péremption</td>
+                 <td>TaxeTVA</td>
+                 <td ><span ng-show="tableform.$visible">Action</span></td>
+             </tr>
+             <tr ng-repeat="user in lines | filter:filterUser">
+                 <td>
+     <span editable-ui-select="user.article" data-e-ng-model="state" e-form="tableform" data-e-style="min-width:180px;">
+       {{user.article.nomarticle}}
+       <editable-ui-select-match placeholder="Choisir Article">
+         {{$select.selected.nomarticle}}
+       </editable-ui-select-match>
+       <editable-ui-select-choices repeat="state in vm.articles | filter: $select.search track by $index">
+         <div>{{state.nomarticle}}</div>
+       <small>
+         poids: {{state.poids}}
+       </small>
+       </editable-ui-select-choices>
+     </span>
+                 </td>
+                 <td>
+                   <span editable-text="user.prix_unitaire " e-form="tableform" edit-disabled="true" data-e-style="max-width:80px;">
+                     {{user.prix_unitaire}}
+                   </span>
+                 </td>
+                 <td>
+           <span editable-text="user.quantite" e-form="tableform" data-e-style="max-width:60px;"	type="number">
+             {{ user.quantite}}
+           </span>
+                 </td>
+                                 <td>
+           <span editable-text="user.prixAchat" e-form="tableform" data-e-style="max-width:60px;">
+             {{ user.prixAchat}}
+           </span>
+                 </td>  <td>
+           <span e-form="tableform" data-e-style="min-width:80px;" editable-bsdate="user.dateperemption"
+            e-is-open="opened.$data"
+              e-ng-click="open($event,'$data')"
+              e-datepicker-popup="dd-MMMM-yyyy"
+              e-show-calendar-button="true"
+              id="hideCalendarButton">
 
-    {{ (user.dateperemption | date:"dd-MM-yyyy") || 'empty' }}
-          </span>
-                </td>
-                           <td>
+     {{ (user.dateperemption | date:"dd-MM-yyyy") || 'empty' }}
+           </span>
+                 </td>
+                            <td>
 
-                          <span editable-text="user.taxeTVA" e-form="tableform" data-e-style="max-width:50px;">
-                            {{user.taxeTVA}}
-                          </span>
-                        </td>
-                <td >
+                           <span editable-text="user.taxeTVA" e-form="tableform" data-e-style="max-width:50px;">
+                             {{user.taxeTVA}}
+                           </span>
+                         </td>
+                 <td >
 
-                    <form editable-form name="tableform" onaftersave="saveUser($data,user.medicament,user.quantite)" ng-show="tableform.$visible"
-                          class="form-buttons form-inline" shown="inserted == user">
-                        <button type="submit" ng-disabled="tableform$waiting" class="btn-sm btn-primary">
-                            <span class="glyphicon glyphicon-plus"></span>
-                        </button>
-                        <button type="button" ng-disabled="tableform.$waiting" ng-click="tableform.$cancel()"
-                                class="btn-sm btn-default">
-                            <span class="glyphicon glyphicon-move"></span>
-                        </button>
-                    </form>
-                    <div class="buttons" ng-show="!tableform.$visible">
-                        <button type="button" class="btn-sm btn-info" ng-click="tableform.$show()">edit</button>
-                        <button type="button" class="btn-sm btn-danger" ng-click="removeUser($index)">del</button>
-                    </div>
-                </td>
-            </tr>
-        </table><button class="btn-sm btn-success"	ng-click="addLine()">Add</md-button>
+                     <form editable-form name="tableform" onaftersave="saveUser($data,user.medicament,user.quantite)" ng-show="tableform.$visible"
+                           class="form-buttons form-inline" shown="inserted == user">
+                         <button type="submit" ng-disabled="tableform$waiting" class="btn-sm btn-primary">
+                             <span class="glyphicon glyphicon-plus"></span>
+                         </button>
+                         <button type="button" ng-disabled="tableform.$waiting" ng-click="tableform.$cancel()"
+                                 class="btn-sm btn-default">
+                             <span class="glyphicon glyphicon-move"></span>
+                         </button>
+                     </form>
+                     <div class="buttons" ng-show="!tableform.$visible">
+                         <button type="button" class="btn-sm btn-info" ng-click="tableform.$show()">edit</button>
+                         <button type="button" class="btn-sm btn-danger" ng-click="removeUser($index)">del</button>
+                     </div>
+                 </td>
+             </tr>
+         </table><button class="btn-sm btn-success"	ng-click="addLine()">Add</md-button>
 
-    </div>
-    </div>
-    </div> </div>
-    <div class="row">
-    <div class="col-lg-10" style="border: 2px">
-        <jhi-alert></jhi-alert>
-        <div class="panel">
+     </div>
+     </div>
+     </div> </div>
+     <div class="row">
+     <div class="col-lg-10" style="border: 2px">
+         <jhi-alert></jhi-alert>
+         <div class="panel">
 
-            <div class="panel-body">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th></th>
-                        <th>Prix</th>
-                        <th>Quantite</th>
-                        <th>Taxe</th>
-                        <th>Date</th>
-                        <th>Montant Ht</th>
-                        <th>Montant ttc</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat=" user in lines">
-                        <td>{{ user.article.nomarticle}}</td>
-                        <td>{{ user.prix_unitaire}}</td>
-                        <td>{{ user.quantite}}</td>
-                        <td>{{ user.taxeTVA}}</td>
-                        <td>{{ user.dateperemption| date:"dd-MM-yyyy"}}</td>
-                        <td>{{ user.prix_unitaire*user.quantite}}</td>
-                        <td>{{ (user.prix_unitaire*user.quantite)+(user.prix_unitaire*user.taxeTVA *0.01)}}</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td><td></td><td></td>
-                        <td>TOTAL</td>
-                        <td><span class="badge btn-danger">{{getTotal()}}</span></td>
-                        <td><span class="badge btn-danger">{{getTotalTTC()}}</span></td>
-                    </tr>
-                    </tbody>
-                </table>
-                <button type="button" class="btn btn-primary" ng-click="saveTable()">Valider</button>
-                <button type="button" class="btn btn-danger" ng-click="cancel()">cancel</button>
-            </div>
-        </div>
+             <div class="panel-body">
+                 <table class="table table-striped">
+                     <thead>
+                     <tr>
+                         <th></th>
+                         <th>Prix</th>
+                         <th>Quantite</th>
+                         <th>Taxe</th>
+                         <th>Date</th>
+                         <th>Montant Ht</th>
+                         <th>Montant ttc</th>
+                     </tr>
+                     </thead>
+                     <tbody>
+                     <tr ng-repeat=" user in lines">
+                         <td>{{ user.article.nomarticle}}</td>
+                         <td>{{ user.prix_unitaire}}</td>
+                         <td>{{ user.quantite}}</td>
+                         <td>{{ user.taxeTVA}}</td>
+                         <td>{{ user.dateperemption| date:"dd-MM-yyyy"}}</td>
+                         <td>{{ user.prix_unitaire*user.quantite}}</td>
+                         <td>{{ (user.prix_unitaire*user.quantite)+(user.prix_unitaire*user.taxeTVA *0.01)}}</td>
+                     </tr>
+                     <tr>
+                         <td></td>
+                         <td></td><td></td><td></td>
+                         <td>TOTAL</td>
+                         <td><span class="badge btn-danger">{{getTotal()}}</span></td>
+                         <td><span class="badge btn-danger">{{getTotalTTC()}}</span></td>
+                     </tr>
+                     </tbody>
+                 </table>
+                 <button type="button" class="btn btn-primary" ng-click="saveTable()">Valider</button>
+                 <button type="button" class="btn btn-danger" ng-click="cancel()">cancel</button>
+             </div>
+         </div>
 
-    </div>
-</div>
-    </div>
-</div> -->
+     </div>
+ </div>
+     </div>
+ </div> -->
 </div>
