--- a/src/main/webapp/app/statistique/stat_produit.html
+++ b/src/main/webapp/app/statistique/stat_produit.html
@@ -7,10 +7,10 @@
                 <div class="col-md-5">
 
                     <p class="input-group">
-                        <span class="input-group-addon" data-translate="audits.filter.from">from</span>
+                        <span class="input-group-addon" data-translate="gestCApp.sortieArticle.home.from">from</span>
                         <input type="date" class="input-sm form-control" name="start" ng-model="vm.fromDate"
                                ng-change="vm.onChangeDate()" required/>
-                        <span class="input-group-addon" data-translate="audits.filter.to">to</span>
+                        <span class="input-group-addon" data-translate="gestCApp.sortieArticle.home.to">to</span>
                         <input type="date" class="input-sm form-control" name="end" ng-model="vm.toDate"
                                ng-change="vm.onChangeDate()" required/>
                     </p>
@@ -36,10 +36,10 @@
                 <div class="col-md-5">
 
                     <p class="input-group">
-                        <span class="input-group-addon" data-translate="audits.filter.from">from</span>
+                        <span class="input-group-addon" data-translate="gestCApp.sortieArticle.home.from">from</span>
                         <input type="date" class="input-sm form-control" name="start" ng-model="vm.fromDate"
                                ng-change="vm.onChangeDate()" required/>
-                        <span class="input-group-addon" data-translate="audits.filter.to">to</span>
+                        <span class="input-group-addon" data-translate="gestCApp.sortieArticle.home.to">to</span>
                         <input type="date" class="input-sm form-control" name="end" ng-model="vm.toDate"
                                ng-change="vm.onChangeDate()" required/>
                     </p>
