--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -82,13 +82,13 @@
                     <div class="panel-body">
                         <ul class="list-inline">
                             <li class="item"><a ui-sref="client"><span
-                                class=" label label-success">Nombre de Client</span>&nbsp;<span
-                                class="badge label-info">{{vm.stockAlerte.length}}</span></a>
+                                class=" label label-primary">Client Enregistés</span>&nbsp;<span
+                                class="badge label-info">{{vm.clients.length}}</span></a>
                             </li>
                             <br>
                               <li class="item"><a ui-sref="fournisseur"><span
-                                class=" label label-primary">Nombre de Fournisseurs </span>&nbsp;<span
-                                class="badge label-info">{{vm.stockAlerte.length}}</span></a>
+                                class=" label label-primary">Fournisseurs Enregistrés</span>&nbsp;<span
+                                class="badge label-info">{{vm.fournisseurs.length}}</span></a>
                             </li>
                             <br>
                               <li class="item"><a ui-sref="rupstock"><span
