--- a/src/main/webapp/app/statistique/stat_produit.html
+++ b/src/main/webapp/app/statistique/stat_produit.html
@@ -2,10 +2,10 @@
     <h3 class="center-block text-center">Statistiques Sur les Produits </h3>
     <uib-tabset active="activeJustified" justified="true" style="background-color: #FFFFF5;color: #333000">
         <uib-tab index="0" heading="Produits Vendus (quantite)">
-            <div class="row x_title"><h4 data-translate="" class="text-success">Courbes montrant la quantité des
+            <div class="row x_title"><h4 data-translate="" class="text-success text-center">Courbes montrant la quantité des
                 produits les
                 plus vendus dans une periode donnée </h4></div>
-                <div class="col-md-5">
+                <div class="row ">
 
                     <p class="input-group">
                         <span class="input-group-addon" data-translate="gestCApp.sortieArticle.home.from">from</span>
@@ -32,7 +32,7 @@
         </uib-tab>
         <uib-tab index="1" heading="produits commandés">
             <div class="row">
-                <h5 data-translate="" class="text-success">Courbes montrant les produits les plus commandés dans une
+                <h5 data-translate="" class="text-success text-center">Courbes montrant les produits les plus commandés dans une
                     periode donnée </h5>
                 <div class="col-md-5">
 
@@ -61,7 +61,7 @@
         </uib-tab>
         <uib-tab index="2" heading="Produits en Stock">
             <div class="row">
-                <h5 data-translate="" class="text-success">Courbes montrant les produits en Stock </h5>
+                <h5 data-translate="" class="text-success text-center">Courbes montrant les produits en Stock </h5>
                 <!--         <div class="col-md-5">
                             <h4 data-translate="audits.filter.title">Filter by date</h4>
                             <p class="input-group">
